--- a/Boku no Hero Academia Theme/Theme.css
+++ b/Boku no Hero Academia Theme/Theme.css
@@ -1,4 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Open+Sans:400,700');*/
 @import url('https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Open+Sans:400,700');
 
 body[data-owner=""]:after {
@@ -94,6 +93,9 @@ body {
   text-align: center;
   line-height: 48px;
   font-size: 0;
+  
+  /* TEMP */
+  display: none !important;
 }
 .header .header-info a {
   display: inline-block;
@@ -206,6 +208,7 @@ body {
   font-size: 0 !important;
   font-weight: normal !important;
   
+  cursor: pointer;
   z-index: 1;
   transition: color 0.075s cubic-bezier(0.32,0.05,0.48,1) !important;
 }
@@ -354,6 +357,14 @@ body {
   text-align: left;
 }
 
+body[data-owner="1"] .icon-menu.history {
+  text-align: right;
+}
+body[data-owner="1"] .icon-menu.export {
+  text-align: center;
+  margin-right: 15px;
+}
+
 .status-menu .status-button:before { font-size: 14px; }
 .status-menu .status-button.all_anime:before { content: "All Anime"; }
 .status-menu .status-button.watching:before { content: "Watching"; }
@@ -368,11 +379,67 @@ body {
 .icon-menu.anime-list:before  { content: "Animelist"; }
 .icon-menu.manga-list:before { content: "Mangalist"; }
 .icon-menu.history:before { content: "History"; }
+.icon-menu.export:before { content: "Export"; }
 .icon-menu.logout:before { content: "Logout"; }
 
-/* temp! */
-.icon-menu.export, .icon-menu.setting { display: none; }
-/* continues */
+body[data-owner="1"] .icon-menu.manga-list:before {
+  content: "Manga";
+  font-size: 12px;
+}
+
+body[data-owner="1"] .icon-menu.manga-list {
+  position: absolute;
+  top: 66px;
+  left: 36px;
+  
+  width: 55px !important;
+  height: 22px;
+  
+  text-align: center;
+  line-height: 22px;
+  color: #0cd693;
+}
+
+body[data-owner="1"] .icon-menu.setting {
+  position: absolute;
+  top: 66px;
+  left: 191px;
+  
+  width: 28px;
+  height: 22px;
+  background: #001a0e !important;
+  box-shadow: 1px 1px 0 1px #d60025;
+  
+  font-size: 20px;
+  color: #0cd693;
+  transition: all 0.075s cubic-bezier(0.32,0.05,0.48,1);
+}
+body[data-owner="1"] .icon-menu.setting:hover, body[data-owner="1"] .icon-menu.manga-list:hover {
+  color: #fff;
+}
+body[data-owner="1"] .icon-menu.setting:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -9px;
+  
+  display: block;
+  width: 18px;
+  height: 28px;
+  background: #001a0e;
+  
+  transform: skew(-30deg);
+  box-shadow: 2px 1px 0 1px #d60025;
+}
+body[data-owner="1"] .icon-menu.setting:before {
+  content: "\f013";
+  position: relative;
+  
+  font-family: FontAwesome;
+  font-size: 20px;
+  
+  z-index: 1;
+}
 
 .status-menu .status-button:after { display: none !important; }
 
