--- a/Boku no Hero Academia Theme/Theme.css
+++ b/Boku no Hero Academia Theme/Theme.css
@@ -1,4 +1,4 @@
-/* Boku no Hero Academia Theme by Valerio Lyndon / Beta Revision 5 */
+/* Boku no Hero Academia Theme by Valerio Lyndon / Beta Revision 6 */
 
 @import url('https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Open+Sans:400,700');
 
@@ -73,9 +73,9 @@ body {
 
 .header .header-title {
   top: 3px;
-  left: calc(50% - 175px);
+  left: calc(50% - 156px);
   
-  width: 350px;
+  width: 312px;
   height: 120px;
   background: url(http://i.imgur.com/yH5Mc3g.png) no-repeat center center / contain scroll;
   
@@ -213,6 +213,9 @@ body {
   cursor: pointer;
   z-index: 1;
   transition: color 0.075s cubic-bezier(0.32,0.05,0.48,1) !important;
+}
+body[data-owner="1"] .btn-menu .username {
+  display: none !important;
 }
 .btn-menu .username:hover, .list-menu .manga-list:hover {
   color: #fff !important;
@@ -359,14 +362,6 @@ body {
   text-align: left;
 }
 
-body[data-owner="1"] .icon-menu.history {
-  text-align: right;
-}
-body[data-owner="1"] .icon-menu.export {
-  text-align: center;
-  margin-right: 15px;
-}
-
 .status-menu .status-button:before { font-size: 14px; }
 .status-menu .status-button.all_anime:before { content: "All Anime"; }
 .status-menu .status-button.watching:before { content: "Watching"; }
@@ -384,15 +379,10 @@ body[data-owner="1"] .icon-menu.export {
 .icon-menu.export:before { content: "Export"; }
 .icon-menu.logout:before { content: "Logout"; }
 
-body[data-owner="1"] .icon-menu.manga-list:before {
-  content: "Manga";
-  font-size: 12px;
-}
-
-body[data-owner="1"] .icon-menu.manga-list {
+body[data-owner="1"] .icon-menu.export {
   position: absolute;
   top: 66px;
-  left: 36px;
+  left: -19px;
   
   width: 55px !important;
   height: 22px;
@@ -401,46 +391,107 @@ body[data-owner="1"] .icon-menu.manga-list {
   line-height: 22px;
   color: #0cd693;
 }
+body[data-owner="1"] .icon-menu.export:before {
+  font-size: 12px;
+}
 
+body[data-owner="1"] .icon-menu.setting:hover, body[data-owner="1"] .icon-menu.export:hover {
+  color: #fff;
+}
+
+/* !!! IN SERIOUS NEED OF CLEANUP !!! */
 body[data-owner="1"] .icon-menu.setting {
   position: absolute;
   top: 66px;
-  left: 191px;
+  left: 36px;
   
-  width: 28px;
+  width: 55px !important;
   height: 22px;
-  background: #001a0e !important;
-  box-shadow: 1px 1px 0 1px #d60025;
+  margin: 0 !important;
   
-  font-size: 20px;
   color: #0cd693;
+  line-height: 22px;
+  text-align: center;
+  
   transition: all 0.075s cubic-bezier(0.32,0.05,0.48,1);
 }
-body[data-owner="1"] .icon-menu.setting:hover, body[data-owner="1"] .icon-menu.manga-list:hover {
-  color: #fff;
+body[data-owner="1"] .icon-menu.setting:before {
+  content: "SETTINGS" /*gear - f013*/;
+  font-size: 12px;
 }
-body[data-owner="1"] .icon-menu.setting:after {
-  content: "";
+body[data-owner="1"] .icon-menu.setting .text {
   position: absolute;
-  top: 0;
-  right: -9px;
+  top: 28px !important;
+  right: 12px !important;
+  left: auto !important;
   
   display: block;
-  width: 18px;
-  height: 28px;
-  background: #001a0e;
+  width: 10px !important;
+  height: 0 !important;
+  
+  opacity: 1 !important;
+  overflow: visible;
+}
+body[data-owner="1"] .list-menu-float .icon-menu.setting .text a {
+  position: absolute;
+  left: auto !important;
+  
+  display: block !important;
+  
+  width: 100px !important;
+  height: 20px !important;
+  padding: 2px 0 0 !important;
+  border: none !important;
+  background: #001a0e !important;
+  background-clip: content-box !important;
+  
+  color: #0cd693 !important;
+  font-size: 11px !important;
+  line-height: 20px !important;
+  font-family: Carrois Gothic SC;
+  text-align: center !important;
+  
+  opacity: 0;
+  transition-property: opacity, color;
+  transition-timing-function: cubic-bezier(0.32,0.05,0.48,1);
+  pointer-events: none;
+}
+body[data-owner="1"] .list-menu-float .icon-menu.setting:hover .text a {
+  opacity: 1;
+  pointer-events: auto;
+}
+body[data-owner="1"] .list-menu-float .icon-menu.setting .text a:hover {
+  color: #fff !important;
+}
+body[data-owner="1"] .list-menu-float .icon-menu.setting .text a:first-of-type {
+  top: 0px !important;
+  right: 0px !important;
+  transition-duration: 0.15s, 0.075s;
+}
+body[data-owner="1"] .list-menu-float .icon-menu.setting .text a:nth-of-type(2) {
+  top: 22px !important;
+  right: 12px !important;
+  transition-duration: 0.3s, 0.075s;
+}
+body[data-owner="1"] .icon-menu.setting a:before, body[data-owner="1"] .icon-menu.setting a:after {
+  content: "";
+	
+	position: absolute;
+	top: 2px;
+	
+	display: block;
+	width: 12px;
+  height: 20px;
+  background: #001a0e !important;
   
   transform: skew(-30deg);
-  box-shadow: 2px 1px 0 1px #d60025;
+  z-index: -1;
 }
-body[data-owner="1"] .icon-menu.setting:before {
-  content: "\f0ad" /*gear - f013*/;
-  position: relative;
-  
-  font-family: FontAwesome;
-  font-size: 20px;
-  
-  z-index: 1;
+body[data-owner="1"] .icon-menu.setting a:before {
+  left: -6px;
+}
+body[data-owner="1"] .icon-menu.setting a:after {
+  right: -6px;
 }
 
 .status-menu .status-button:after { display: none !important; }
@@ -584,7 +635,7 @@ body[data-owner="1"] .icon-menu.setting:before {
 .list-table-header {
   position: absolute;
   top: 28px;
-  left: 8px;
+  left: 12px;
   
   display: block;
 }
@@ -600,7 +651,7 @@ body[data-owner="1"] .icon-menu.setting:before {
   
   width: auto !important;
   height: auto !important;
-  padding: 2px 4px 0 !important;
+  padding: 2px 0 0 !important;
   border: none !important;
   background: none !important;
   
@@ -641,21 +692,6 @@ body[data-owner="1"] .icon-menu.setting:before {
   left: 48px;
   transition-duration: 0.75s;
 }
-/*.header-title.started {
-  top: 88px;
-  left: 48px;
-  transition-duration: 0.75s;
-}
-.header-title.finished {
-  top: 110px;
-  left: 60px;
-  transition-duration: 0.9s;
-}
-.header-title.priority {
-  top: 132px;
-  left: 72px;
-  transition-duration: 1.05s;
-}*/
 
 .list-table-header .header-title a {
   width: 100px;
@@ -713,20 +749,28 @@ body[data-owner="1"] .icon-menu.setting:before {
 /* CHARACTER */
 
 .cover-block {
-  width: 1060px;
+  width: 1050px;
   height: 430px;
   margin-top: 64px;
+}
+.image-container {
+  display: block !important;
+  width: 1250px !important;
+  height: 430px;
+  padding: 0 !important;
+  margin-left: -100px;
+  
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: 20px center;
+  background-position: 115px center;
   background-attachment: scroll;
 }
-body[data-query*="\"status\":7"] .cover-block { background-image: url(http://i.imgur.com/2dNxOcM.png); background-position: left center; }
-body[data-query*="\"status\":1"] .cover-block { background-image: url(http://i.imgur.com/aPHWdRV.png); }
-body[data-query*="\"status\":2"] .cover-block { background-image: url(http://i.imgur.com/Dv7xyGN.png); }
-body[data-query*="\"status\":3"] .cover-block { background-image: url(http://i.imgur.com/0HM7Vho.png); background-position: left center; }
-body[data-query*="\"status\":4"] .cover-block { background-image: url(http://i.imgur.com/Wa1MIcN.png); background-position: right center; }
-body[data-query*="\"status\":6"] .cover-block { background-image: url(http://i.imgur.com/JQlB1VA.png); background-position: 563px center; }
+body[data-query*="\"status\":7"] .image-container { background-image: url(http://i.imgur.com/2dNxOcM.png); background-position: 20px center; }
+body[data-query*="\"status\":1"] .image-container { background-image: url(http://i.imgur.com/aPHWdRV.png); }
+body[data-query*="\"status\":2"] .image-container { background-image: url(http://i.imgur.com/Dv7xyGN.png); }
+body[data-query*="\"status\":3"] .image-container { background-image: url(http://i.imgur.com/0HM7Vho.png); background-position: 85px center; }
+body[data-query*="\"status\":4"] .image-container { background-image: url(http://i.imgur.com/dh42mXP.png); background-position: 570px center; }
+body[data-query*="\"status\":6"] .image-container { background-image: url(http://i.imgur.com/JQlB1VA.png); background-position: 670px center; }
 
 .btn-list-setting { display: none !important; }
 
@@ -755,6 +799,7 @@ body[data-query*="\"status\":6"] .cover-block { background-image: url(http://i.i
   position: static;
   
   width: 100%;
+  min-width: 1050px;
   height: 64px;
   background: #000d07;
 }
@@ -827,6 +872,15 @@ body[data-query*="\"status\":6"] .cover-block { background-image: url(http://i.i
 .list-unit .list-status-title .stats a:hover {
   color: #fff;
   transition: color 0.075s cubic-bezier(0.32,0.05,0.48,1);
+}
+
+.list-unit .list-stats {
+  width: 100%;
+  margin-top: -15px;
+  background: #000d07;
+  
+  color: #0cd693;
+  font-family: Open Sans;
 }
 
 .list-table {
@@ -1302,6 +1356,8 @@ body[data-query*="\"status\":6"] .cover-block { background-image: url(http://i.i
   color: #fff600 !important;
 }
 
+/* LOADING SPINNER */
+
 .list-unit .loading-space {
   height: auto;
   margin: 0 0 5px 0;
@@ -1310,6 +1366,88 @@ body[data-query*="\"status\":6"] .cover-block { background-image: url(http://i.i
   width: 20px;
   margin: 0 auto;
   /* may not need margin if it goes inline */
+}
+
+/* FILTER BOX */
+/* !!! NEEDS WORK !!! */
+
+#advanced-options {
+  width: 100%;
+  padding: 30px 0 30px 0;
+  border: none;
+  background: #001a0e;
+  
+  font-family: Open Sans;
+}
+#advanced-options #fancybox-close {
+  right: calc(50% - 375px);
+  
+  background: #000d07;
+  border-radius: 50%;
+}
+
+#advanced-options .advanced-options-header {
+  /*width: 100%;*/
+  border-color: #0cd693;
+  border-width: 2px;
+  /*background: #00150b;*/
+  
+  text-transform: uppercase;
+  font: 16px Carrois Gothic SC;
+  /*text-align: center;*/
+}
+#advanced-options .advanced-options-header .description {
+  /*display: block;*/
+  
+  font: 12px Open Sans;
+  color: #bbb;
+}
+#advanced-options .advanced-options-button {
+  width: 100%;
+  padding: 0;
+  border-width: 0;
+  background: #00150b;
+}
+#advanced-options .advanced-options-button a {
+  position: relative;
+  
+  background: #0cd693;
+  border-radius: 0;
+  margin: 15px;
+  
+  color: #001a0e;
+  text-transform: uppercase;
+  font: 16px Carrois Gothic SC;
+  
+  transition: all 0.2s cubic-bezier(0.32,0.05,0.48,1);
+}
+.advanced-options-button a:before, .advanced-options-button a:after {
+	content: "";
+	
+	position: absolute;
+	top: 0;
+	
+	display: block;
+	width: 18px;
+  height: 31px;
+  background: #0cd693;
+  
+  transform: skew(-30deg);
+  transition: all 0.2s cubic-bezier(0.32,0.05,0.48,1);
+}
+.advanced-options-button a:before {
+	left: -9px;
+}
+.advanced-options-button a:after {
+	right: -9px;
+}
+#advanced-options .advanced-options-button a:hover, .advanced-options-button a:hover:before, .advanced-options-button a:hover:after {
+  background: #fff600;
+}
+
+#fancybox-overlay {
+  background: #000 !important;
+  opacity: 0.6 !important;
 }
 
 /* FOOTER */
